Corrected overflow stylings on page content

--- a/client/style/root.css
+++ b/client/style/root.css
@@ -28,8 +28,9 @@ body {
     grid-template-rows: auto 1fr;
 }
 
-main {
+main.content {
     display: grid;
+    overflow: auto;
 }
 
 body {
